# zerobus-ingest-examples

./: README.md
data_drifter/scripts/: create_telemetry_table.py
demos/: README.md
demos/data_drifter/: DEPLOYMENT.md  README.md  config.toml  databricks.yml  deploy.sh  main.py  requirements.txt
demos/data_drifter/app/: CONFIG_NOTE.md  README.md  app.py  app.yml  config.toml  navigation_utils.py  requirements.txt
demos/data_drifter/docs/: APP_USAGE.md  CONFIGURATION.md  README.md  TELEMETRY_SCHEMA.md  TROUBLESHOOTING.md
demos/data_drifter/notebooks/: 01_boat_performance.py  02_wind_conditions.py  (+6 more)
example_clients/: README.md
example_clients/opcua_zerobus/: .env.example  README.md  create_table.sql  opcua_zerobus_client.py  requirements.txt  tags_config.yaml
example_clients/salesforce_zerobus/: .env.example  .gitignore  README.md  app.yaml  build_wheel.py  databricks.yml  lakeflow_declarative_pipeline.py  main.py  notebook_task.py  pyproject.toml  requirements.txt
example_clients/salesforce_zerobus/go_salesforce_zerobus/: Dockerfile  Makefile  go.mod  go.sum
example_clients/salesforce_zerobus/go_salesforce_zerobus/cmd/zerobus/: main.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/internal/backoff/: backoff.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/internal/config/: config.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/internal/databricks/: forwarder.go  replay.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/internal/pipeline/: pipeline.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/internal/pubsub/: avro.go  bitmap.go  client.go  dedup.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/internal/sfauth/: sfauth.go
example_clients/salesforce_zerobus/go_salesforce_zerobus/proto/: pubsub_api.proto  salesforce_events.proto
example_clients/salesforce_zerobus/resources/: app.yml  job.yml  pipelines.yml
example_clients/salesforce_zerobus/salesforce_zerobus/: __init__.py  core.py
example_clients/salesforce_zerobus/salesforce_zerobus/databricks/: __init__.py  databricks_forwarder.py  databricks_replay_manager.py
example_clients/salesforce_zerobus/salesforce_zerobus/pubsub/: __init__.py  client.py
example_clients/salesforce_zerobus/salesforce_zerobus/pubsub/proto/: __init__.py  pubsub_api_pb2_grpc.py  salesforce_events.proto  salesforce_events_pb2.py  salesforce_events_pb2_grpc.py
example_clients/salesforce_zerobus/salesforce_zerobus/utils/: __init__.py  flow_controller.py
example_clients/syslog-ng-zerobus/: .env.example  README.md  app.py  create_table.sql  syslog-ng.conf
(+23 files in other folders)
